template-complete-demo.yaml
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      openshift.io/sa.scc.mcs: s0:c27,c19
      openshift.io/sa.scc.supplemental-groups: 1000740000/10000
      openshift.io/sa.scc.uid-range: 0/20000
    labels:
      kubernetes.io/metadata.name: sock-shop
    name: sock-shop
  spec:
    finalizers:
    - kubernetes
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: carts
    labels:
      name: carts
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: carts
    template:
      metadata:
        labels:
          name: carts
      spec:
        containers:
        - name: carts
          image: quay.io/daniel_casali/usvc-carts
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: carts
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: carts
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: carts
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: carts-db
    labels:
      name: carts-db
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: carts-db
    template:
      metadata:
        labels:
          name: carts-db
      spec:
        containers:
        - name: carts-db
          image: quay.io/daniel_casali/usvc-mongo
          ports:
          - name: mongo
            containerPort: 27017
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          - mountPath: /data/db
            name: mongo
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
          - name: mongo
            emptyDir: {}
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: carts-db
    labels:
      name: carts-db
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 27017
      targetPort: 27017
    selector:
      name: carts-db
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: catalogue
    labels:
      name: catalogue
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: catalogue
    template:
      metadata:
        labels:
          name: catalogue
      spec:
        containers:
        - name: catalogue
          image: quay.io/daniel_casali/usvc-catalogue
          command: ["/app"]
          args:
          - -port=8080
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsUser: 10001
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: catalogue
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: catalogue
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: catalogue
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: catalogue-db
    labels:
      name: catalogue-db
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: catalogue-db
    template:
      metadata:
        labels:
          name: catalogue-db
      spec:
        securityContext:
          runAsUser: 999
        containers:
        - name: catalogue-db
          image: quay.io/daniel_casali/usvc-catalogue-db
          ports:
          - name: mysql
            containerPort: 3306
          volumeMounts:
          - mountPath: /var/lib/mysql/
            name: varlibmysql
        volumes:
          - name: varlibmysql
            emptyDir: {}
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: catalogue-db
    labels:
      name: catalogue-db
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 3306
      targetPort: 3306
    selector:
      name: catalogue-db
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: front-end
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: front-end
    template:
      metadata:
        labels:
          name: front-end
      spec:
        containers:
        - name: front-end
          image: quay.io/daniel_casali/usvc-front-end
          resources:
            limits:
              cpu: 300m
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 300Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: front-end-external
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: front-end
    namespace: sock-shop
  spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 8080
    selector:
      name: front-end
- apiVersion: v1
  kind: Service
  metadata:
    name: front-end
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: front-end
    namespace: sock-shop
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
    selector:
      name: front-end
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: orders
    labels:
      name: orders
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: orders
    template:
      metadata:
        labels:
          name: orders
      spec:
        containers:
        - name: orders
          image: quay.io/daniel_casali/usvc-orders
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 300Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: orders
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: orders
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: orders
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: orders-db
    labels:
      name: orders-db
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: orders-db
    template:
      metadata:
        labels:
          name: orders-db
      spec:
        containers:
        - name: orders-db
          image: quay.io/daniel_casali/usvc-mongo
          ports:
          - name: mongo
            containerPort: 27017
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          - mountPath: /data/db
            name: mongo
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
          - name: mongo
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: orders-db
    labels:
      name: orders-db
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 27017
      targetPort: 27017
    selector:
      name: orders-db
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: payment
    labels:
      name: payment
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: payment
    template:
      metadata:
        labels:
          name: payment
      spec:
        containers:
        - name: payment
          image: quay.io/daniel_casali/usvc-payment
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 99m
              memory: 100Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: payment
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: payment
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: payment
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: queue-master
    labels:
      name: queue-master
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: queue-master
    template:
      metadata:
        labels:
          name: queue-master
      spec:
        containers:
        - name: queue-master
          image: quay.io/daniel_casali/usvc-queue-master
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 300Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: queue-master
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: queue-master
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: queue-master
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: rabbitmq
    labels:
      name: rabbitmq
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: rabbitmq
    template:
      metadata:
        labels:
          name: rabbitmq
        annotations:
          prometheus.io/scrape: "false"
      spec:
        containers:
        - name: rabbitmq
          image: quay.io/daniel_casali/usvc-rabbitmq:management
          ports:
          - containerPort: 15672
            name: management
          - containerPort: 5672
            name: rabbitmq
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 999
          volumeMounts:
          - mountPath: /var/log/rabbitmq
            name: varlograbbitmq
          - mountPath: /var/lib/rabbitmq
            name: varlibrabbitmq
        - name: rabbitmq-exporter
          image: quay.io/daniel_casali/usvc-rabbitmq-exporter:ppc64le
          ports:
          - containerPort: 9090
            name: exporter
          volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: varlibrabbitmq
          - mountPath: /var/log/rabbitmq
            name: varlograbbitmq
        volumes:
          - name: varlograbbitmq
            emptyDir: {}
          - name: varlibrabbitmq
            emptyDir: {}
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: rabbitmq
    annotations:
          prometheus.io/scrape: 'true'
          prometheus.io/port: '9090'
    labels:
      name: rabbitmq
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 5672
      name: rabbitmq
      targetPort: 5672
    - port: 9090
      name: exporter
      targetPort: exporter
      protocol: TCP
    selector:
      name: rabbitmq
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: session-db
    labels:
      name: session-db
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: session-db
    template:
      metadata:
        labels:
          name: session-db
        annotations:
          prometheus.io.scrape: "false"
      spec:
        containers:
        - name: session-db
          image: quay.io/daniel_casali/usvc-redis:alpine
          ports:
          - name: redis
            containerPort: 6379
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
            readOnlyRootFilesystem: true
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: session-db
    labels:
      name: session-db
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 6379
      targetPort: 6379
    selector:
      name: session-db
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: shipping
    labels:
      name: shipping
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: shipping
    template:
      metadata:
        labels:
          name: shipping
      spec:
        containers:
        - name: shipping
          image: quay.io/daniel_casali/usvc-shipping
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 300Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: shipping
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: shipping
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: shipping
  
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: user
    labels:
      name: user
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: user
    template:
      metadata:
        labels:
          name: user
      spec:
        containers:
        - name: user
          image: quay.io/daniel_casali/usvc-user
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: user
    annotations:
          prometheus.io/scrape: 'true'
    labels:
      name: user
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 80
      targetPort: 8080
    selector:
      name: user
  
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: user-db
    labels:
      name: user-db
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: user-db
    template:
      metadata:
        labels:
          name: user-db
      spec:
        containers:
        - name: user-db
          image: quay.io/daniel_casali/usvc-user-db
          ports:
          - name: mongo
            containerPort: 27017
          securityContext:
            readOnlyRootFilesystem: false
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
        volumes:
          - name: tmp-volume
            emptyDir:
              medium: Memory
        nodeSelector:
          kubernetes.io/os: linux
- apiVersion: v1
  kind: Service
  metadata:
    name: user-db
    labels:
      name: user-db
    namespace: sock-shop
  spec:
    ports:
      # the port that this service should serve on
    - port: 27017
      targetPort: 27017
    selector:
      name: user-db
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      name: front-end
    name: front-end-external
    namespace: sock-shop
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    port:
      targetPort: 8080
    to:
      kind: Service
      name: front-end-external
      weight: 100
    wildcardPolicy: None
